--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://banner2.cleanpng.com/20180402/qkq/kisspng-business-company-building-organization-economy-5ac1d028926ef5.1613807515226511765998.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Dream Home</title>
   </head>
   <body>
     <div id="root"></div>
